third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/expansion/use_inner_scope_shadows.exp
module 0x2::M {
    struct S1 has drop {
        b: bool,
    }
    struct S2 has drop {
        u: u64,
    }
    struct S3 has drop {
        a: address,
    }
    fun t<T>(): S3 {
        if (!check()) ();
        num(0) + 1;
        S1{b: false};
        S2{u: 0};
        S3{a: 0x0}
    }
    fun check(): bool {
        false
    }
    fun num(u: u64): u64 {
        u + 1
    }
    fun t2<T>(x: T) {
        if (!check()) ();
        num(0) + 1;
        S1{b: false};
        S2{u: 0};
        S3{a: 0x0};
        if (!check()) ();
        num(0) + 1;
        t2<T>(x);
        S1{b: false};
        S2{u: 0};
        S3{a: 0x0};
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: expected `address` but found a value of type `integer`
   ┌─ use_inner_scope_shadows.move:16:15
   │
16 │         S3{a: 0x0}
   │               ^^^

error: expected `address` but found a value of type `integer`
   ┌─ use_inner_scope_shadows.move:29:15
   │
29 │         S3{a: 0x0};
   │               ^^^

error: expected `address` but found a value of type `integer`
   ┌─ use_inner_scope_shadows.move:35:15
   │
35 │         S3{a: 0x0};
   │               ^^^
